Fix class overlap

--- a/src/components/manage/Blocks/TilesImages/variations/DataConnectedImageGallery/style.less
+++ b/src/components/manage/Blocks/TilesImages/variations/DataConnectedImageGallery/style.less
@@ -4,7 +4,7 @@
 @import (multiple, reference, optional) '../../theme.config';
 
 @{view} {
-  .habitat-banner-details {
+  .habitat-banner-details-2 {
     &::before {
       .full-width();
       position: absolute;
@@ -22,7 +22,7 @@
 }
 
 @{edit} {
-  .habitat-banner-details {
+  .habitat-banner-details-2 {
     &::before {
       .full-width-edit();
       position: absolute;
@@ -39,12 +39,12 @@
   }
 }
 
-div#view .habitat-banner-details .ui.container > * {
+div#view .habitat-banner-details-2 .ui.container > * {
   margin-top: 0;
   margin-bottom: 0;
 }
 
-.habitat-banner-details {
+.habitat-banner-details-2 {
   position: relative;
   padding: 0;
   margin-bottom: 1rem;
